style: fit logos to responsive width

--- a/src/app/shared/layouts/footer/footer.component.sass
+++ b/src/app/shared/layouts/footer/footer.component.sass
@@ -1,16 +1,54 @@
 @import 'styles/_variables'
 
-.logo-01
-    width: 170px
-    height: 50px
+.logo-01, .logo-02
+    @media (min-width: $xx-larger-devices) and (max-width: $xxx-larger-devices)
+      width: 170px
+      height: 50px
 
-.logo-02
-    width: 170px
-    height: 50px
+    @media (min-width: $x-larger-devices) and (max-width: $xx-larger-devices)
+      width: 170px
+      height: 50px
+ 
+    @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
+      width: 120px
+      height: 40px
+    
+    @media (min-width: $medium-devices) and (max-width: $larger-devices)
+      width: 120px
+      height: 40px
+
+    @media (min-width: $small-devices) and (max-width: $medium-devices)
+      width: 120px
+      height: 40px
+
+    @media (min-width: $x-small-devices) and (max-width: $small-devices)
+      width: 120px
+      height: 40px
 
 .logo-03
+  @media (min-width: $xx-larger-devices) and (max-width: $xxx-larger-devices)
     width: 100px
     height: 50px
+    
+  @media (min-width: $x-larger-devices) and (max-width: $xx-larger-devices)
+    width: 100px
+    height: 50px
+
+  @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
+    width: 77px
+    height: 40px
+  
+  @media (min-width: $medium-devices) and (max-width: $larger-devices)
+    width: 77px
+    height: 40px
+
+  @media (min-width: $small-devices) and (max-width: $medium-devices)
+    width: 77px
+    height: 40px
+
+  @media (min-width: $x-small-devices) and (max-width: $small-devices)
+    width: 77px
+    height: 40px
 
 footer
   bottom: 0
