style: improve responsive in professional side

--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -1,9 +1,64 @@
-.container
-  width: 85%
-  margin: 20px auto 0px
+@import 'styles/_variables'
+
+$panels-height: 645px
+$panels-height-xl: 500px
+
+:host
+    display: block
+    width: 100%
+    height: 100%
+
+.cards-container
+    margin-top: 20px
+    
+    @media (min-width: $x-small-devices) and (max-width: $small-devices)
+        flex-direction: column!important
+        .prescription-panel
+            order: 1
+        .my-prescriptions-panel
+            order: 2
+
+    .prescription-panel, .my-prescriptions-panel
+        width: calc(100% / 2)
+        mat-card
+            box-sizing: content-box!important
+            height: calc(#{$panels-height} - 32px)
+            @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
+                height: calc(#{$panels-height-xl} - 32px)
+
+            @media (min-width: $x-small-devices) and (max-width: $larger-devices)
+                height: auto
+            mat-card-title, mat-card-content
+                margin: 0!important
+                .login-action
+                    margin-top: 20px
+                    @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
+                        margin-top: 40px
+
+                @media (min-width: $larger-devices) and (max-width: $xx-larger-devices)
+                    .login-error
+                        margin-bottom: -15px!important
+
+            mat-card-actions
+                padding: 0!important
+                margin: 0!important
+                @media (min-width: $x-small-devices) and (max-width: $larger-devices)
+                    flex-direction: column!important
+                    a.btn-link
+                        max-width: 100%!important
+                        margin: 10px 0!important
+
+        @media (min-width: $medium-devices) and (max-width: $larger-devices)
+            width: 600px
+        @media (min-width: $small-devices) and (max-width: $medium-devices)
+            width: 450px
+        @media (min-width: $x-small-devices) and (max-width: $small-devices)
+            width: 480px
+            max-width: calc(100% - 10px)
+            margin: 10px auto!important
 
 .mat-form-field, button
-  margin: 10px 0
+  margin: 5px 0
 
 .patient-container, .nested-supplies
   mat-form-field
@@ -35,16 +90,6 @@
     opacity: 1
 
 
-.new-prescription
-  width: 50%
-
-.prescriptions-container
-  display: flex
-  flex-direction: column
-  max-height: 500px
-  min-width: 300px
-
-
 .mat-table
   overflow: auto
   max-height: 500px
@@ -72,3 +117,7 @@
   margin-left: 24px
   outline: 1px
   outline-offset: -2px
+
+.mat-table
+  overflow: auto
+  max-height: 500px
