--- a/src/app/professionals/components/professional-list/professional-list.component.html
+++ b/src/app/professionals/components/professional-list/professional-list.component.html
@@ -1,9 +1,8 @@
-<mat-card class="professional-list">
-  <div fxFlex="100" fxLayout="column" fxLayoutAlign="start">
-    <h1>
-      <mat-icon>list_alt</mat-icon>
-      Mis recetas
-    </h1>
+<mat-card fxLayout="column" fxLayoutAlign="space-between" class="responsive_table">
+  <mat-card-title>
+    <h2><mat-icon>list_alt</mat-icon> Mis recetas</h2>
+  </mat-card-title>
+  <mat-card-content>
     <div class="prescriptions-container mat-elevation-z8">
       <mat-table #table [dataSource]="dataSource">
 
@@ -73,5 +72,5 @@
         </mat-row>
       </mat-table>
     </div>
-  </div>
+  </mat-card-content>
 </mat-card>
