style: add resolution

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -23,8 +23,8 @@
           agudos de los pacientes.
         </mat-card-content>
         <mat-card-actions fxLayout="row" fxLayoutGap="10px">
-          <a mat-raised-button href="https://drive.google.com/open?id=1GBPS_RdHIS8Kx3VWNpW6ZkMwdyFRPfDs" target="_blank" fxFlex="50%" class="btn-link">
-            <mat-icon>remove_red_eye</mat-icon> Ver disposición
+          <a mat-raised-button href="https://drive.google.com/open?id=1J1qu0vo0fzhB985_iYEBVMXMPJuiQQgH" target="_blank" fxFlex="50%" class="btn-link">
+            <mat-icon>remove_red_eye</mat-icon> Ver resolución
           </a>
           <a mat-raised-button (click)="showInformation()" target="_blank" fxFlex="50%" class="btn-link">
             <mat-icon>info</mat-icon> Leer importante
