--- a/src/app/professionals/components/professional-dialog/professional-dialog.component.html
+++ b/src/app/professionals/components/professional-dialog/professional-dialog.component.html
@@ -10,6 +10,30 @@
     </div>
   </div> <!-- End case noPrescriptions -->
 
+  <div *ngSwitchCase="'delete'">
+    <h3 mat-dialog-title><mat-icon>delete</mat-icon> Desea eliminar la receta?</h3>
+    <div mat-dialog-content>
+      <p>Receta de {{data.prescription.patient.lastName}}, {{data.prescription.patient.firstName}}</p>
+      <p>Una vez eliminada no se podrá recuperar</p>
+    </div>
+    <div mat-dialog-actions fxLayoutAlign="space-around" align="end">
+      <button mat-button (click)="onNoClick()" cdkFocusInitial>Cancelar</button>
+      <button mat-raised-button color="warn" (click)="deletePrescription(data.prescription)">Confirmar</button>
+    </div>
+  </div> <!-- End case noPrescriptions -->
+
+  <div *ngSwitchCase="'error-dispensed'">
+    <h3 mat-dialog-title><mat-icon>delete</mat-icon> Desea eliminar la receta?</h3>
+    <div mat-dialog-content>
+      <p>Receta de {{data.prescription.patient.lastName}}, {{data.prescription.patient.firstName}}</p>
+      <p>Una vez eliminada no se podrá recuperar</p>
+    </div>
+    <div mat-dialog-actions fxLayoutAlign="space-around" align="end">
+      <button mat-button (click)="onNoClick()" cdkFocusInitial>Cancelar</button>
+      <button mat-raised-button color="warn" (click)="deletePrescription(data.prescription)">Confirmar</button>
+    </div>
+  </div> <!-- End case noPrescriptions -->
+
   <div *ngSwitchDefault>
     <h3 mat-dialog-title><mat-icon>error</mat-icon>  Error</h3>
     <div mat-dialog-content>
