improve pharmacist form, fix datepicker, and removes patient_dni autocomplete

--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div fxLayout="row" fxLayoutAlign="space-evenly start" fxLayoutGap="20px" class="cards-container" fxFill>
-    
+
     <div class="search-panel">
       <mat-card fxLayout="column" fxLayoutAlign="space-between">
         <mat-card-title>
@@ -18,14 +18,8 @@
                   aria-label="Number"
                   matInput
                   maxlength="8"
-                  formControlName="patient_dni"
-                  [matAutocomplete]="auto">
-                <mat-autocomplete #auto="matAutocomplete">
-                  <mat-option (onSelectionChange)="searchPrescriptions(patient)" *ngIf="patient" [value]="patient.dni">
-                    {{patient.lastName}} {{patient.firstName}} DNI {{patient.dni}}
-                  </mat-option>
-                </mat-autocomplete>
-                <mat-hint align="end">{{patient_dni.value.length}} / 8</mat-hint>
+                  formControlName="patient_dni">
+                <mat-hint align="end">{{ patient_dni.value.length }} / 8</mat-hint>
                 <mat-error *ngIf="patient_dni.errors?.required && patient_dni.touched">
                   Debe ingresar el dni del paciente
                 </mat-error>
@@ -38,8 +32,12 @@
               <!-- Fecha de receta -->
               <mat-form-field>
                 <mat-label>Fecha receta</mat-label>
-                <input matInput [matDatepicker]="picker1" [formControl]="dateFilter" ng->
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                <input matInput [matDatepicker]="picker1" [formControl]="dateFilter" (click)="picker1.open()" readonly>
+
+                <mat-datepicker-toggle matSuffix [for]="picker1" *ngIf="!dateFilter.value"></mat-datepicker-toggle>
+                <button type="button" mat-icon-button matSuffix *ngIf="dateFilter.value" (click)="cleanDateEvent()">
+                  <mat-icon>close</mat-icon>
+                </button>
                 <mat-datepicker #picker1></mat-datepicker>
               </mat-form-field>
             </div>
