--- a/src/app/pharmacists/components/prescription-list/prescription-list.component.html
+++ b/src/app/pharmacists/components/prescription-list/prescription-list.component.html
@@ -12,7 +12,7 @@
         <!-- Professional -->
         <ng-container matColumnDef="user">
           <mat-header-cell *matHeaderCellDef> Profesional </mat-header-cell>
-          <mat-cell *matCellDef="let prescription"> {{prescription.professionalFullname}} </mat-cell>
+          <mat-cell *matCellDef="let prescription"> {{prescription.professional.businessName }} </mat-cell>
         </ng-container>
 
         <!-- Date -->
@@ -41,11 +41,9 @@
         <ng-container matColumnDef="action">
           <mat-header-cell *matHeaderCellDef> Acción </mat-header-cell>
           <mat-cell *matCellDef="let prescription">
-            <div *ngIf="canPrint(prescription)">
-              <button mat-button matTooltip="Imprimir" (click)="printPrescription(prescription)" matTooltipPosition="above">
+              <button mat-button matTooltip="Imprimir" *ngIf="canPrint(prescription)" (click)="printPrescription(prescription)" matTooltipPosition="above">
                 <mat-icon >print</mat-icon>
               </button>
-            </div>
             <div *ngIf="prescription.status === 'Pendiente'">
               <button mat-button color="primary" (click)="dispense(prescription)" matTooltip="Dispensar" matTooltipPosition="above"><mat-icon >done_outline</mat-icon></button>
             </div>
