--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -19,6 +19,7 @@
                   matInput
                   maxlength="8"
                   formControlName="patient_dni">
+                <mat-spinner matSuffix [color]="spinnerColor" [diameter]="20" *ngIf="dniShowSpinner"></mat-spinner>
                 <mat-hint align="end">{{ patient_dni.value.length }} / 8</mat-hint>
                 <mat-error *ngIf="patient_dni.errors?.required && patient_dni.touched">
                   Debe ingresar el dni del paciente
@@ -34,10 +35,15 @@
                 <mat-label>Fecha receta</mat-label>
                 <input matInput [matDatepicker]="picker1" [formControl]="dateFilter" (click)="picker1.open()" readonly>
 
-                <mat-datepicker-toggle matSuffix [for]="picker1" *ngIf="!dateFilter.value"></mat-datepicker-toggle>
-                <button type="button" mat-icon-button matSuffix *ngIf="dateFilter.value" (click)="cleanDateEvent()">
-                  <mat-icon>close</mat-icon>
-                </button>
+                <div matSuffix *ngIf="!dateShowSpinner">
+                  <mat-datepicker-toggle  [for]="picker1" *ngIf="!dateFilter.value"></mat-datepicker-toggle>
+                  <button type="button" mat-icon-button *ngIf="dateFilter.value" (click)="cleanDateEvent()">
+                    <mat-icon>close</mat-icon>
+                  </button>
+                </div>
+
+                <mat-spinner matSuffix [color]="spinnerColor" [diameter]="20" *ngIf="dateShowSpinner"></mat-spinner>
+
                 <mat-datepicker #picker1></mat-datepicker>
               </mat-form-field>
             </div>
