feat: add delete prescription

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -190,7 +190,7 @@
     </div>
 
     <div class="my-prescriptions-panel">
-      <app-professional-list [myPrescriptions]="myPrescriptions" (deletePrescriptionEvent)="deletePrescription($event)"></app-professional-list>
+      <app-professional-list [myPrescriptions]="myPrescriptions"></app-professional-list>
     </div>
 
   </div>
