--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div fxLayout="row" fxLayoutAlign="space-evenly start" fxLayoutGap="20px" class="cards-container" fxFill>
-    
+
     <!-- panel "Formulario receta" -->
     <div class="prescription-panel">
       <mat-card fxLayout="column" fxLayoutAlign="space-between" class="new-prescription">
@@ -177,11 +177,17 @@
               </div>
 
               <div fxLayout="row" fxLayoutAlign="center">
-                <button mat-raised-button color="primary" type="submit" *ngIf="!showSubmit" fxFlex="100%">
-                  Crear
-                </button>
+                <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="20px" *ngIf="!isSubmit" fxFlex="100%">
+                  <button mat-raised-button type="button" *ngIf="isEdit" fxFlex="100%" (click)="clearForm()">
+                    Cancelar
+                  </button>
 
-                <mat-spinner [color]="spinnerColor" [diameter]="spinnerDiameter" *ngIf="showSubmit"></mat-spinner>
+                  <button mat-raised-button color="primary" type="submit" fxFlex="100%">
+                    {{ !isEdit ? 'Crear' : 'Guardar' }}
+                  </button>
+                </div>
+
+                <mat-spinner [color]="spinnerColor" [diameter]="spinnerDiameter" *ngIf="isSubmit"></mat-spinner>
               </div>
             </form>
           </mat-card-content>
@@ -190,7 +196,7 @@
     </div>
 
     <div class="my-prescriptions-panel">
-      <app-professional-list [myPrescriptions]="myPrescriptions"></app-professional-list>
+      <app-professional-list [myPrescriptions]="myPrescriptions" (editPrescriptionEvent)="editPrescription($event)"></app-professional-list>
     </div>
 
   </div>
