adds diagnotic fields in prescriptions

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -170,6 +170,11 @@
                 </button>
 
                 <mat-form-field appearance="fill">
+                  <mat-label>Diagnóstico</mat-label>
+                  <textarea tabIndex="7" matInput placeholder="Diagnóstico" formControlName="diagnostic"></textarea>
+                </mat-form-field>
+
+                <mat-form-field appearance="fill">
                   <mat-label>Observaciones</mat-label>
                   <textarea tabIndex="7" matInput placeholder="Observaciones" formControlName="observation"></textarea>
                 </mat-form-field>
