replace professionals-list to prescriptions-list component

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -201,7 +201,7 @@
     </div>
 
     <div class="my-prescriptions-panel">
-      <app-professional-list [myPrescriptions]="myPrescriptions" (editPrescriptionEvent)="editPrescription($event)"></app-professional-list>
+      <app-prescriptions-list (editPrescriptionEvent)="editPrescription($event)"></app-prescriptions-list>
     </div>
 
   </div>
