--- a/src/app/shared/styles/_variables.sass
+++ b/src/app/shared/styles/_variables.sass
@@ -8,3 +8,7 @@ $larger-devices: 1200px            // (large devices)
 $x-larger-devices: 1440px          // (large devices)
 $xx-larger-devices: 1680px         // (large devices)
 $xxx-larger-devices: 1920px        // (large devices)
+
+$header-height: 64px
+$footer-height: 50px
+$app-component: 20px
