--- a/src/styles.sass
+++ b/src/styles.sass
@@ -11,6 +11,8 @@ body
 
 .wrapper
     width: 80%
+    height: auto
+    min-height: calc(100vh - (#{$header-height} + #{$footer-height} + #{$app-component}))
     margin: auto
     @media (min-width: $xx-larger-devices) and (max-width: $xxx-larger-devices)
         min-width: calc(#{$xx-larger-devices} - 20px)
