--- a/src/app/auth/auth.component.sass
+++ b/src/app/auth/auth.component.sass
@@ -1,10 +1,11 @@
-:host
-    display: block
-    width: 100%
-    height: 100%
-    .container
-        margin-top: 100px
+@import 'styles/_variables'
 
+:host
+  display: block
+  width: 100%
+  height: 100%
+  .wrapper
+    min-height: calc(100vh - (#{$header-height} + #{$footer-height} + 4em))!important
 .icon-login
     width: 100px
     height: 100px
