--- a/src/app/shared/layouts/footer/footer.component.sass
+++ b/src/app/shared/layouts/footer/footer.component.sass
@@ -1,5 +1,11 @@
 @import 'styles/_variables'
 
+:host
+  display: block
+  height: $footer-height
+  @media (min-width: $x-small-devices) and (max-width: $small-devices)
+    height: auto
+
 .logo-01, .logo-02
     @media (min-width: $xx-larger-devices) and (max-width: $xxx-larger-devices)
       width: 170px
@@ -8,11 +14,11 @@
     @media (min-width: $x-larger-devices) and (max-width: $xx-larger-devices)
       width: 170px
       height: 50px
- 
+
     @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
       width: 120px
       height: 40px
-    
+
     @media (min-width: $medium-devices) and (max-width: $larger-devices)
       width: 120px
       height: 40px
@@ -29,7 +35,7 @@
   @media (min-width: $xx-larger-devices) and (max-width: $xxx-larger-devices)
     width: 100px
     height: 50px
-    
+
   @media (min-width: $x-larger-devices) and (max-width: $xx-larger-devices)
     width: 100px
     height: 50px
@@ -37,7 +43,7 @@
   @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
     width: 77px
     height: 40px
-  
+
   @media (min-width: $medium-devices) and (max-width: $larger-devices)
     width: 77px
     height: 40px
@@ -51,13 +57,4 @@
     height: 40px
 
 footer
-  bottom: 0
   width: 100%
-  @media (min-width: $xx-larger-devices) and (max-width: $xxx-larger-devices)
-    position: absolute
-
-  @media (min-width: $x-larger-devices) and (max-width: $xx-larger-devices)
-    position: absolute
- 
-  @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
-    position: absolute
