improve prescriptions styles for screens with 1920px width

--- a/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
+++ b/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
@@ -1,6 +1,6 @@
 <mat-card fxLayout="column" fxLayoutAlign="space-between">
   <mat-card-title>
-    <h2><mat-icon>list_alt</mat-icon> Mis recetas</h2>
+    <h2 fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px"><mat-icon>list_alt</mat-icon> <span>Mis recetas</span></h2>
   </mat-card-title>
   <mat-card-content>
 
@@ -8,14 +8,14 @@
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtrar por paciente o fecha">
     </mat-form-field>
 
-    <div class="example-container mat-elevation-z8">
-      <div class="example-table-container">
+    <div class="container mat-elevation-z8">
+      <div class="table-container">
         <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
           <!-- Paciente Column -->
           <ng-container matColumnDef="patient">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Paciente </th>
-            <td mat-cell *matCellDef="let element" class='m-card-title' test data-label='Paciente'> {{ element.patient.lastName.toUpperCase() }}, {{ element.patient.firstName.toUpperCase() }}</td>
+            <td mat-cell *matCellDef="let element" class='title-cell' test data-label='Paciente'> {{ element.patient.lastName.toUpperCase() }}, {{ element.patient.firstName.toUpperCase() }}</td>
           </ng-container>
 
           <!-- Fecha Column -->
@@ -31,15 +31,15 @@
           </ng-container>
 
           <!-- Insumos Column -->
-          <!-- <ng-container matColumnDef="modified">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last modified </th>
-            <td mat-cell *matCellDef="let element" class='has_label_on_mobile' data-label='Last modified on'> {{element.modified}} </td>
-          </ng-container> -->
+          <ng-container matColumnDef="supply_count">
+            <th mat-header-cell *matHeaderCellDef> Insumos </th>
+            <td mat-cell *matCellDef="let element" class='has_label_on_mobile' data-label='Insumos'> {{element.supplies.length}} </td>
+          </ng-container>
 
           <!-- Accion Column -->
-          <ng-container matColumnDef="star">
-            <th mat-header-cell *matHeaderCellDef> </th>
-            <td mat-cell *matCellDef="let element" (click)="$event.stopPropagation()">
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Acción </th>
+            <td mat-cell *matCellDef="let element" (click)="$event.stopPropagation()" class="actions-cell">
               <button mat-icon-button [matMenuTriggerFor]="menu" class="menu-collapse">
                 <mat-icon>more_vert</mat-icon>
               </button>
@@ -59,26 +59,40 @@
               </mat-menu>
 
               <div fxLayout="row">
-                <button mat-menu-item>
-                  <mat-icon>open_in_new</mat-icon>
+                <button mat-menu-item type="button" *ngIf="canPrint(element)" (click)="printPrescription(element)">
+                  <mat-icon>print</mat-icon>
                 </button>
-                <button mat-menu-item>
-                  <mat-icon>undo</mat-icon>
+                <button mat-menu-item type="button" *ngIf="canEdit(element)" (click)="edit(element)">
+                  <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-menu-item>
+                <button mat-menu-item type="button" *ngIf="canDelete(element)" (click)="deleteDialogPrescription(element)">
                   <mat-icon>delete</mat-icon>
                 </button>
               </div>
             </td>
           </ng-container>
 
+          <ng-container matColumnDef="arrow">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-menu-item type="button">
+                <mat-icon [@arrowDirection]="element._id == expandedElement?._id ? 'up' : 'down'">expand_more</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+
           <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
           <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-              <div class="example-element-detail" [@detailExpand]="element._id == expandedElement?._id ? 'expanded' : 'collapsed'">
-              <div class="example-element-diagram">
-                <div class="example-element-position" *ngIf="element.diagnostic"> Diagnóstico: {{element.diagnostic}} </div>
-                <div class="example-element-position" *ngIf="element.observation"> Observaciones: {{element.observation}} </div>
+              <div class="element-detail" [@detailExpand]="element._id == expandedElement?._id ? 'expanded' : 'collapsed'">
+              <div class="element-diagram">
+                <div class="supplies-list">
+                  <div class="supply-description" *ngFor="let supp of element.supplies">
+                    <span>{{ supp.supply.name }}</span> <mat-chip>{{ supp.quantity }}</mat-chip>
+                  </div>
+                </div>
+                <div class="element-description" *ngIf="element.diagnostic"> <span class="description-title"> Diagnóstico:</span> {{element.diagnostic}} </div>
+                <div class="element-description" *ngIf="element.observation"> <span class="description-title">Observaciones:</span> {{element.observation}} </div>
               </div>
             </div>
             </td>
@@ -86,18 +100,17 @@
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-            class="example-element-row"
-            [class.example-expanded-row]="expandedElement === row"
+            class="element-row"
+            [class.expanded-row]="expandedElement === row"
             (click)="expandedElement = expandedElement === row ? null : row">
           </tr>
-          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 
         </table>
       </div>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20, 30]"></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[10, 20, 30]"></mat-paginator>
     </div>
 
 
   </mat-card-content>
 </mat-card>
-
