align card title with the icon

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+
   <div fxLayout="row" fxLayoutAlign="space-evenly start" fxLayoutGap="20px" class="cards-container" fxFill>
 
     <!-- panel "Formulario receta" -->
@@ -6,8 +6,8 @@
       <mat-card fxLayout="column" fxLayoutAlign="space-between" class="new-prescription">
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="start">
           <mat-card-title>
-            <h2>
-              <mat-icon>gesture</mat-icon> Registrar nueva receta
+            <h2 fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+              <mat-icon>gesture</mat-icon> <span>Registrar nueva receta</span>
             </h2>
           </mat-card-title>
 
@@ -205,4 +205,3 @@
     </div>
 
   </div>
-</div>
