--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -1,16 +1,12 @@
 @import 'styles/_variables'
 
-$panels-height: 645px
-$panels-height-xl: 500px
-
 :host
     display: block
     width: 100%
     height: 100%
 
 .cards-container
-    margin-top: 20px
-    
+
     @media (min-width: $x-small-devices) and (max-width: $small-devices)
         flex-direction: column!important
         .prescription-panel
@@ -22,9 +18,6 @@ $panels-height-xl: 500px
         width: calc(100% / 2)
         mat-card
             box-sizing: content-box!important
-            height: calc(#{$panels-height} - 32px)
-            @media (min-width: $larger-devices) and (max-width: $x-larger-devices)
-                height: calc(#{$panels-height-xl} - 32px)
 
             @media (min-width: $x-small-devices) and (max-width: $larger-devices)
                 height: auto
@@ -72,24 +65,6 @@ $panels-height-xl: 500px
 .custom-error-container
   position: relative
 
-  mat-error
-    position: relative
-    font-size: 75%
-    animation-name: error-show
-    animation-duration: .3s
-    top: calc(100% - 1.7916666667em)
-
-
-@keyframes error-show
-  from
-    transform: translateY(-100%)
-    opacity: 0
-
-  to
-    transform: translateY(0%)
-    opacity: 1
-
-
 .mat-table
   overflow: auto
   max-height: 500px
@@ -118,6 +93,6 @@ $panels-height-xl: 500px
   outline: 1px
   outline-offset: -2px
 
-.mat-table
-  overflow: auto
-  max-height: 500px
+// .mat-table
+//   overflow: auto
+//   max-height: 500px
