--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -19,105 +19,106 @@
                   fxLayoutAlign="center"
                   fxLayoutGap="10px"
                   fxLayoutGap.xs="0">
-
+                <div class="first-block">
                 <!-- Fecha de receta -->
-                <mat-form-field appearance="fill">
-                  <mat-label>Fecha receta</mat-label>
-                  <input matInput [matDatepicker]="picker1" [formControl]="date" autocomplete="off" required tabIndex="-1">
-                  <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                  <mat-datepicker [startAt]="today" #picker1></mat-datepicker>
+                  <mat-form-field appearance="fill">
+                    <mat-label>Fecha receta</mat-label>
+                    <input matInput [matDatepicker]="picker1" [formControl]="date" autocomplete="off" required tabIndex="-1">
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker [startAt]="today" #picker1></mat-datepicker>
 
-                  <mat-error *ngIf="date.errors?.required">
-                    Debe ingresar una fecha válida
-                  </mat-error>
-                </mat-form-field>
+                    <mat-error *ngIf="date.errors?.required">
+                      Debe ingresar una fecha válida
+                    </mat-error>
+                  </mat-form-field>
 
-                <div formGroupName="patient" class="patient-container" fxLayout="row" fxLayoutGap="10px">
-                  <div>
-                    <!-- Dni -->
-                    <mat-form-field appearance="fill">
-                      <mat-label>DNI paciente</mat-label>
-                      <input type="text"
-                        tabIndex="1"
-                        #dni
-                        placeholder="DNI"
-                        aria-label="Number"
-                        matInput
-                        required
-                        maxlength="8"
-                        formControlName="dni"
-                        [matAutocomplete]="auto">
-                        <mat-spinner matSuffix [color]="spinnerColor" [diameter]="20" *ngIf="dniShowSpinner"></mat-spinner>
+                  <div formGroupName="patient" class="patient-container" fxLayout="row" fxLayoutGap="10px">
+                    <div class="st-bk-patient">
+                      <!-- Dni -->
+                      <mat-form-field appearance="fill">
+                        <mat-label>DNI paciente</mat-label>
+                        <input type="text"
+                          tabIndex="1"
+                          #dni
+                          placeholder="DNI"
+                          aria-label="Number"
+                          matInput
+                          required
+                          maxlength="8"
+                          formControlName="dni"
+                          [matAutocomplete]="auto">
+                          <mat-spinner matSuffix [color]="spinnerColor" [diameter]="20" *ngIf="dniShowSpinner"></mat-spinner>
 
-                      <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option (onSelectionChange)="completePatientInputs(patientSearch)" *ngIf="patientSearch?._id" [value]="patientSearch.dni">
-                          {{patientSearch.lastName}} {{patientSearch.firstName}} DNI {{patientSearch.dni}}
-                        </mat-option>
-                      </mat-autocomplete>
+                        <mat-autocomplete #auto="matAutocomplete">
+                          <mat-option (onSelectionChange)="completePatientInputs(patientSearch)" *ngIf="patientSearch?._id" [value]="patientSearch.dni">
+                            {{patientSearch.lastName}} {{patientSearch.firstName}} DNI {{patientSearch.dni}}
+                          </mat-option>
+                        </mat-autocomplete>
 
-                      <mat-hint align="end">{{dni.value.length}} / 8</mat-hint>
+                        <mat-hint align="end">{{dni.value.length}} / 8</mat-hint>
 
-                      <mat-error *ngIf="patientDni.errors?.required">
-                        Debe ingresar el dni del paciente
-                      </mat-error>
-
-                      <mat-error *ngIf="patientDni.errors?.minlength">
-                        El dni debe contener {{patientDni.errors?.minlength.requiredLength}} digitos
-                      </mat-error>
-
-                      <mat-error *ngIf="patientDni.errors?.pattern">
-                        El dni debe contener solo números.
-                      </mat-error>
-                    </mat-form-field>
-
-                    <!-- Lastname -->
-                    <mat-form-field appearance="fill">
-                      <mat-label>Apellido paciente</mat-label>
-                      <input type="text"
-                        tabIndex="3"
-                        placeholder="Apellido"
-                        matInput
-                        required
-                        formControlName="lastName">
-
-                      <mat-error *ngIf="patientLastName.errors?.required">
-                        Debe ingresar el apellido del paciente
+                        <mat-error *ngIf="patientDni.errors?.required">
+                          Debe ingresar el dni del paciente
                         </mat-error>
-                    </mat-form-field>
 
+                        <mat-error *ngIf="patientDni.errors?.minlength">
+                          El dni debe contener {{patientDni.errors?.minlength.requiredLength}} digitos
+                        </mat-error>
+
+                        <mat-error *ngIf="patientDni.errors?.pattern">
+                          El dni debe contener solo números.
+                        </mat-error>
+                      </mat-form-field>
+
+                      <!-- Lastname -->
+                      <mat-form-field appearance="fill">
+                        <mat-label>Apellido paciente</mat-label>
+                        <input type="text"
+                          tabIndex="3"
+                          placeholder="Apellido"
+                          matInput
+                          required
+                          formControlName="lastName">
+
+                        <mat-error *ngIf="patientLastName.errors?.required">
+                          Debe ingresar el apellido del paciente
+                          </mat-error>
+                      </mat-form-field>
+
+                    </div>
+                    <div class="nd-bk-patient">
+                      <!-- sex -->
+                      <mat-form-field appearance="fill">
+                        <mat-label>Sexo</mat-label>
+                        <mat-select formControlName="sex" required tabIndex="2">
+                          <mat-option value="Femenino">Femenino</mat-option>
+                          <mat-option value="Masculino">Masculino</mat-option>
+                          <mat-option value="Otro">Otro</mat-option>
+                        </mat-select>
+
+                        <mat-error *ngIf="patientSex.errors?.required">
+                          Debe seleccionar el tipo de sexo
+                        </mat-error>
+                      </mat-form-field>
+
+                      <!-- Firstname -->
+                      <mat-form-field appearance="fill">
+                        <mat-label>Nombre paciente</mat-label>
+                        <input type="text"
+                        tabIndex="4"
+                          placeholder="Nombre"
+                          matInput
+                          required
+                          formControlName="firstName">
+
+                        <mat-error *ngIf="patientFirstName.errors?.required">
+                          Debe ingresar el nombre del paciente
+                        </mat-error>
+                      </mat-form-field>
+                    </div>
                   </div>
-                  <div>
-                    <!-- sex -->
-                    <mat-form-field appearance="fill">
-                      <mat-label>Sexo</mat-label>
-                      <mat-select formControlName="sex" required tabIndex="2">
-                        <mat-option value="Femenino">Femenino</mat-option>
-                        <mat-option value="Masculino">Masculino</mat-option>
-                        <mat-option value="Otro">Otro</mat-option>
-                      </mat-select>
 
-                      <mat-error *ngIf="patientSex.errors?.required">
-                        Debe seleccionar el tipo de sexo
-                      </mat-error>
-                    </mat-form-field>
-
-                    <!-- Firstname -->
-                    <mat-form-field appearance="fill">
-                      <mat-label>Nombre paciente</mat-label>
-                      <input type="text"
-                      tabIndex="4"
-                        placeholder="Nombre"
-                        matInput
-                        required
-                        formControlName="firstName">
-
-                      <mat-error *ngIf="patientFirstName.errors?.required">
-                        Debe ingresar el nombre del paciente
-                      </mat-error>
-                    </mat-form-field>
-                  </div>
                 </div>
-
 
                 <div formArrayName="supplies" class="nested-supplies">
                   <div class="custom-error-container">
