--- a/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
+++ b/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
@@ -40,21 +40,22 @@
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> Acción </th>
             <td mat-cell *matCellDef="let element" (click)="$event.stopPropagation()" class="actions-cell">
-              <button mat-icon-button [matMenuTriggerFor]="menu" class="menu-collapse">
+              <button mat-menu-item [matMenuTriggerFor]="menu" class="menu-collapse">
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
-                <button mat-menu-item>
-                  <mat-icon>open_in_new</mat-icon>
-                  <span>Open risk plan</span>
+
+                <button mat-menu-item type="button" *ngIf="canPrint(element)" (click)="printPrescription(element)">
+                  <mat-icon>print</mat-icon>
+                  <span>Imprimir receta</span>
                 </button>
-                <button mat-menu-item>
-                  <mat-icon>undo</mat-icon>
-                  <span>Reset questionnairre</span>
+                <button mat-menu-item type="button" *ngIf="canEdit(element)" (click)="editPrescription(element)">
+                  <mat-icon>edit</mat-icon>
+                  <span>Editar receta</span>
                 </button>
-                <button mat-menu-item disabled>
+                <button mat-menu-item type="button" *ngIf="canDelete(element)" (click)="deleteDialogPrescription(element)">
                   <mat-icon>delete</mat-icon>
-                  <span>Delete questionnairre</span>
+                  <span>Eliminar receta</span>
                 </button>
               </mat-menu>
 
@@ -62,7 +63,7 @@
                 <button mat-menu-item type="button" *ngIf="canPrint(element)" (click)="printPrescription(element)">
                   <mat-icon>print</mat-icon>
                 </button>
-                <button mat-menu-item type="button" *ngIf="canEdit(element)" (click)="edit(element)">
+                <button mat-menu-item type="button" *ngIf="canEdit(element)" (click)="editPrescription(element)">
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-menu-item type="button" *ngIf="canDelete(element)" (click)="deleteDialogPrescription(element)">
