adds loading prescriptions into table list

--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -14,7 +14,7 @@
     .st-bk-patient, .nd-bk-patient
       width: calc((100% - 10px) / 2)
 
-  @media (min-width: $larger-devices) and (max-width: $xx-larger-devices)
+  @media (min-width: $larger-devices) and (max-width: $xxx-larger-devices)
     .prescription-panel
       width: 35%!important
     .my-prescriptions-panel
@@ -59,15 +59,6 @@
               width: 100%!important
 
 
-    // .my-prescriptions-panel
-    //   width: 100%!important
-    // .prescription-panel, .my-prescriptions-panel
-    //     width: calc(100% / 2)
-
-    //     mat-card
-    //         box-sizing: content-box!important
-
-
 .mat-form-field, button
   margin: 5px 0
 
@@ -82,11 +73,6 @@
 
 .custom-error-container
   position: relative
-
-// .mat-table
-//   overflow: auto
-//   max-height: 500px
-
 
 .element-row
   position: relative
@@ -111,6 +97,3 @@
   outline: 1px
   outline-offset: -2px
 
-// .mat-table
-//   overflow: auto
-//   max-height: 500px
