--- a/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
+++ b/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
 
     <div class="container mat-elevation-z8">
-      <div class="table-container">
+      <div class="table-container" *ngIf="!loadingPrescriptions">
         <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
           <!-- Paciente Column -->
@@ -108,6 +108,9 @@
           <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 
         </table>
+      </div>
+      <div fxLayout="row" fxLayoutAlign="center" class="loading-prescriptions" *ngIf="loadingPrescriptions">
+        <mat-spinner matSuffix color="primary" [diameter]="40"></mat-spinner>
       </div>
       <mat-paginator [pageSizeOptions]="[10, 20, 30]"></mat-paginator>
     </div>
