--- a/src/app/professionals/components/prescriptions-list/prescriptions-list.component.sass
+++ b/src/app/professionals/components/prescriptions-list/prescriptions-list.component.sass
@@ -1,5 +1,8 @@
 @import 'styles/_variables'
 
+mat-card-content
+  .loading-prescriptions
+    padding: 30px
 
 table
   width: 100%
@@ -82,6 +85,7 @@ table
       mat-icon
         padding: 0px 5px
         margin-right: 0px
+        color: #3e3e3e!important
 
 
     .menu-collapse
