on edit prescription change form title

--- a/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
+++ b/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
@@ -20,8 +20,8 @@
 
           <!-- Fecha Column -->
           <ng-container matColumnDef="prescription_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha emitida </th>
-            <td mat-cell *matCellDef="let element" class='m-card-sub-title' data-label='Fecha emitida'> {{element.date | date : 'dd/MM/yyyy' }} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+            <td mat-cell *matCellDef="let element" class='m-card-sub-title' data-label='Fecha'> {{element.date | date : 'dd/MM/yyyy' }} </td>
           </ng-container>
 
           <!-- Estado Column -->
