--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -4,6 +4,12 @@
     display: block
     width: 100%
     height: 100%
+.pf-container
+  @media (min-width: $x-small-devices) and (max-width: $small-devices)
+    max-width: 100vw
+    position: relative
+    overflow: hidden
+
 
 .cards-container
 
@@ -19,6 +25,7 @@
       width: 35%!important
     .my-prescriptions-panel
       width: 65%!important
+
   @media (min-width: $small-devices) and (max-width: $larger-devices)
     flex-direction: column!important
 
@@ -38,10 +45,16 @@
               width: calc((100% - 20px) / 2)
 
   @media (min-width: $x-small-devices) and (max-width: $small-devices)
-    flex-direction: column!important
+    flex-direction: row!important
+    width: calc((100vw * 2) - (5px * 2) )!important
+    position: relative
+    top: 0
     .prescription-panel
-      max-width: 100%
+      // max-width: 100%
+      max-width: calc((100% / 2) - (10px / 2))
       width: 100%
+      height: 900px
+      margin-right: 10px!important
       margin-bottom: 20px
       .first-block
         display: flex
@@ -57,7 +70,11 @@
             width: 100%!important
             mat-form-field
               width: 100%!important
-
+    .my-prescriptions-panel
+      max-width: calc((100% / 2) - (10px / 2))
+      width: 100%
+      height: 900px
+      overflow: auto
 
 .mat-form-field, button
   margin: 5px 0
